# Pacman-game

./: CMakeLists.txt
header/: Chaser.hpp  GhostsState.hpp  Hunter.hpp  Information.hpp  Map.hpp  PacMan.hpp  Scared.hpp  Snacks.hpp  TypesOfCollisions.hpp  Wandering.hpp  fruits.hpp  ghosts.hpp  ghosts_state.hpp  includefile.hpp  pellets.hpp  pokey.hpp  power_pellets.hpp  shodow.hpp  snacks.hpp  snacks_state.hpp
src/: Chaser.cpp  Hunter.cpp  Map.cpp  PacMan.cpp  Scared.cpp  Snacks.cpp  TypesOfCollisions.cpp  Wandering.cpp  bashful.cpp  frightened_ghosts.cpp  fruits.cpp  ghosts.cpp  main.cpp  pellets.cpp  power_pellets.cpp  snacks.cpp  speedy.cpp
